--- a/AULA_07_CEP/index.html
+++ b/AULA_07_CEP/index.html
@@ -5,9 +5,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Consulta</title>
 
-    <script src="JS/scripts.js"></script>
+    <script src="js/scripts.js"></script>
 
- </SCRIPt:src>
+    <style>
+        body {
+            background-color: rgb(65, 60, 60); 
+            color:white;
+            font-family: Georgia, 'Times New Roman', Times, serif;
+        }
+
+        input{
+            background-color: rgb(65, 60, 60); 
+            color: white;
+            font-family: Verdana, Geneva, Tahoma, sans-serif;
+        }
+
+        button{
+            background-color: black;
+            color: white;
+            font-family: Verdana, Geneva, Tahoma, sans-serif;
+        }
+
+        button:hover{
+            background-color: #ff5100;
+            color: rgb(255, 255, 255);
+            font-family: Verdana, Geneva, Tahoma, sans-serif;
+        }
+
+        p{
+            background-color: rgb(65, 60, 60); 
+            color:white;
+            font-family: Verdana, Geneva, Tahoma, sans-serif;
+        }
+
+    </style>
+
+
+
 
 </head>
 
@@ -22,6 +56,7 @@
     <br>
     <button onclick="buscaEndereco()">Buscar</button>
    
+    <div id="endereco"></div>
 </body>
 
 </html>
