--- a/AULA_05_PROJETO POKEDEX/index.html
+++ b/AULA_05_PROJETO POKEDEX/index.html
@@ -7,13 +7,75 @@
     <title>Pokedex do luquinhas</title>
     <link rel="icon" href="icons/psyduck.ico" type="image/x-icon">
     <script src="js/scripts.js"></script>
+
+<style>
+/* padronização */
+h1{
+
+color: blue !important;
+font-size: larger!important;
+
+}
+
+/* classes para definição e instanciar objetos */
+
+.header {
+color: black;
+font-size: larger;
+
+
+}
+
+.footer{
+color: azure;
+font-size: larger;
+
+}
+
+.fire{
+color: orangered;
+font-size: larger;
+}
+
+
+.water{
+color: blue;
+font-size: larger;
+}
+
+
+.grass{
+color: greenyellow;
+font-size: larger;
+}
+
+
+.earth{
+color: maroon;
+font-size: larger;
+}
+
+.card  {
+border-color: gray;
+border-width: 1px;
+border-style: solid;
+
+
+}
+
+</style>
+
+
 </head>
 
 <body onload="carregarPokemons()">
 
-    
+    <h1 class="header">Lista de Pokemon</h1>
+
     <div id="conteudo-pokemon"></div>
- 
+    
+    <h1 class="footer"> Final da Lista</h1>
+
 </body>
 
 
